--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,9 @@ fabric.properties
 *.tar.gz
 *.rar
 
+# Gradle files
+.gradle/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
