--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,27 @@
-val ktorVersion: String by project
-val kotlinVersion: String by project
-val logbackVersion: String by project
-val exposedVersion: String by project
-val slf4jVersion: String by project
-
-plugins {
-    application
-    kotlin("jvm") version "1.5.30"
-    id ("org.jetbrains.kotlin.plugin.serialization") version ("1.5.21")
+buildscript {
+    repositories {
+        mavenCentral()
+        google()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    }
 }
 
-group = "com.ramitsuri"
-version = "0.0.1"
-application {
-    mainClass.set("com.ramitsuri.ApplicationKt")
+plugins {
+    id "application"
+    id 'org.jetbrains.kotlin.jvm' version "$kotlinVersion"
+    id "org.jetbrains.kotlin.plugin.serialization" version "1.5.21"
 }
 
 repositories {
     mavenCentral()
+    maven { url "https://maven.pkg.jetbrains.space/public/p/kotlinx-html/maven" }
 }
+
+mainClassName = "com.ramitsuri.ApplicationKt"
+group = "com.ramitsuri"
+version = "0.0.1"
 
 dependencies {
     implementation("io.ktor:ktor-auth-jwt:$ktorVersion")
