--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,9 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        google()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-    }
-}
-
 plugins {
     id "application"
-    id 'org.jetbrains.kotlin.jvm' version "$kotlinVersion"
+    id "org.jetbrains.kotlin.jvm" version "$kotlinVersion"
     id "org.jetbrains.kotlin.plugin.serialization" version "1.5.21"
+    id "com.github.johnrengelman.shadow" version "7.0.0"
+    id "com.google.cloud.tools.appengine" version "2.4.2"
 }
 
 repositories {
@@ -22,6 +14,16 @@ repositories {
 mainClassName = "com.ramitsuri.ApplicationKt"
 group = "com.ramitsuri"
 version = "0.0.1"
+
+appengine {
+    stage {
+        artifact = "build/libs/${project.name}-${project.version}-all.jar"
+    }
+    deploy {
+        version = "GCLOUD_CONFIG"
+        projectId = "GCLOUD_CONFIG"
+    }
+}
 
 dependencies {
     implementation("io.ktor:ktor-auth-jwt:$ktorVersion")
@@ -35,7 +37,7 @@ dependencies {
     implementation("org.jetbrains.exposed:exposed-dao:$exposedVersion")
     implementation("org.jetbrains.exposed:exposed-jdbc:$exposedVersion")
     implementation("org.xerial:sqlite-jdbc:3.30.1")
-    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
 
     // Firestore
     implementation("com.google.cloud:google-cloud-firestore:3.0.5")
@@ -50,4 +52,16 @@ dependencies {
     testImplementation("org.jetbrains.kotlin:kotlin-test:$kotlinVersion")
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1")
     testImplementation("io.mockk:mockk:1.12.0")
+}
+
+test {
+    useJUnit()
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = '1.8'
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = '1.8'
 }
