--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation("org.xerial:sqlite-jdbc:3.30.1")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
 
+    // Event bus
+    implementation ("com.google.guava:guava-gwt:31.0.1-jre")
+
     // Firestore
     implementation("com.google.cloud:google-cloud-firestore:3.0.5")
 
