Attempt to fix path in workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-appengine@v0.4.0
         with:
-          deliverables: src/main/appengine/app.yml
+          deliverables: app.yml
           project_id: ${{ secrets.GCP_PROJECT }}
           credentials: ${{ secrets.GCP_CREDENTIALS }}
 
