--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Deploy to App Engine
-        id: deploy
-        uses: google-github-actions/deploy-appengine@v0.4.0
+      - name: Setup GCP Service Account
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          deliverables: app.yml
+          version: 'latest'
           project_id: ${{ secrets.GCP_PROJECT }}
-          credentials: ${{ secrets.GCP_CREDENTIALS }}
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          export_default_credentials: true
 
-      - name: Show Output
-        run: echo ${{ steps.deploy.outputs.url }}
+      - name: Deploy to App Engine
+        run: ./gradlew appengineDeploy
