--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ dependencies {
     implementation("org.jetbrains.exposed:exposed-core:$exposedVersion")
     implementation("org.jetbrains.exposed:exposed-dao:$exposedVersion")
     implementation("org.jetbrains.exposed:exposed-jdbc:$exposedVersion")
-    implementation("org.xerial:sqlite-jdbc:3.30.1")
+    implementation('org.xerial:sqlite-jdbc:3.36.0.2')
+    implementation('org.postgresql:postgresql:42.3.1')
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
 
     // Event bus
