Revert "Migrate data from Firestore to hosted Postgres"
This reverts commit 54059d6e87ec20b56d46acd914740a08c2168e89.

--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ repositories {
 
 mainClassName = "com.ramitsuri.ApplicationKt"
 group = "com.ramitsuri"
-version = "migration"
+version = "0.0.6"
 
 appengine {
     stage {
