--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,3 +1,3 @@
 runtime: java11
-entrypoint: 'java -jar choresserver-migration-all.jar'
+entrypoint: 'java -jar choresserver-0.0.6-all.jar'
 env_variables:
