--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
     implementation("ch.qos.logback:logback-core:$logbackVersion")
     implementation("org.slf4j:slf4j-api:$slf4jVersion")
+    implementation ("org.slf4j:slf4j-simple:2.0.7")
 
     // Hash
     implementation "com.ToxicBakery.library.bcrypt:bcrypt:1.0.9"
