Specify AppEngine automatic scaling
Limit to at least 1 idle instance so there's
an instance always running, no cold start and hence
a request is fulfilled without potential for multiple
requests starting new instances.

Should fix #10

--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,3 +1,7 @@
 runtime: java11
 entrypoint: 'java -jar choresserver-0.0.20-all.jar'
+automatic_scaling:
+  min_instances: 1
+  max_instances: 1
+  min_idle_instances: 1
 env_variables:
