--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation('org.postgresql:postgresql:42.6.0')
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
 
+    implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.1")
+
     // Logging
     implementation("ch.qos.logback:logback-classic:$logbackVersion")
     implementation("ch.qos.logback:logback-core:$logbackVersion")
