--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Add google.json from secrets
+        run: |
+          touch google.json
+          echo "${{ secrets.GOOGLE_JSON }}" >> google.json
+
       - name: Add environment vars from secrets
         run: |
           echo "  DB_URL: ${{ secrets.DB_URL }}" >> src/main/appengine/app.yaml
@@ -26,10 +31,6 @@ jobs:
           echo "  JWT_SECRET: ${{ secrets.JWT_SECRET }}" >> src/main/appengine/app.yaml
           echo "  JWT_ISSUER: ${{ secrets.JWT_ISSUER }}" >> src/main/appengine/app.yaml
           echo "  ADD_DUMMY_DATA: ${{ secrets.ADD_DUMMY_DATA }}" >> src/main/appengine/app.yaml
-
-      - name: Check environment vars
-        run: >
-          cat src/main/appengine/app.yaml
 
       - name: Setup GCP Service Account
         uses: google-github-actions/setup-gcloud@v0
