Update how google.json is written
Cloud engine is having trouble parsing the json written
by GH actions. So trying something else
```
Exception in thread "main" com.google.gson.stream.MalformedJsonException:
Use JsonReader.setLenient(true) to accept malformed JSON at line 2 column 4 path $.
```

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Add google.json from secrets
+        env:
+          GOOGLE_JSON: ${{ secrets.GOOGLE_JSON }}
         run: |
           touch src/main/resources/google.json
-          echo "${{ secrets.GOOGLE_JSON }}" >> src/main/resources/google.json
+          echo "$GOOGLE_JSON" > src/main/resources/google.json
 
       - name: Add environment vars from secrets
         run: |
